--- a/pak-ios/storyboards/Base.lproj/Main.storyboard
+++ b/pak-ios/storyboards/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -699,7 +699,7 @@
                                                                 <rect key="frame" x="35" y="21.5" width="305" height="24"/>
                                                                 <nil key="textColor"/>
                                                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="20"/>
-                                                                <textInputTraits key="textInputTraits"/>
+                                                                <textInputTraits key="textInputTraits" keyboardType="phonePad"/>
                                                             </textField>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AAd-4R-yrL" userLabel="v_line">
                                                                 <rect key="frame" x="0.0" y="49.5" width="375" height="0.5"/>
@@ -832,7 +832,7 @@
                                                                 <rect key="frame" x="35" y="21.5" width="305" height="24"/>
                                                                 <nil key="textColor"/>
                                                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="20"/>
-                                                                <textInputTraits key="textInputTraits"/>
+                                                                <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
                                                             </textField>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3zb-t8-zua" userLabel="v_line">
                                                                 <rect key="frame" x="0.0" y="49.5" width="375" height="0.5"/>
@@ -877,7 +877,7 @@
                                                                 <rect key="frame" x="35" y="21.5" width="305" height="24"/>
                                                                 <nil key="textColor"/>
                                                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="20"/>
-                                                                <textInputTraits key="textInputTraits"/>
+                                                                <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                                             </textField>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U4u-gs-OGr" userLabel="v_line">
                                                                 <rect key="frame" x="0.0" y="49.5" width="375" height="0.5"/>
@@ -922,7 +922,7 @@
                                                                 <rect key="frame" x="35" y="21.5" width="305" height="24"/>
                                                                 <nil key="textColor"/>
                                                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="20"/>
-                                                                <textInputTraits key="textInputTraits"/>
+                                                                <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                                             </textField>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mMZ-Wp-Krw" userLabel="v_line">
                                                                 <rect key="frame" x="0.0" y="49.5" width="375" height="0.5"/>
@@ -7072,12 +7072,12 @@ EMKhTGlzdG8hA
         <segue reference="0wQ-9P-YXB"/>
         <segue reference="e49-xG-mKz"/>
         <segue reference="OS7-IV-a8p"/>
-        <segue reference="xVe-nE-p4w"/>
+        <segue reference="RzB-aK-gvt"/>
         <segue reference="bmc-MF-fkN"/>
         <segue reference="oBi-e6-wfk"/>
         <segue reference="1vM-Rq-4HF"/>
-        <segue reference="dfd-t0-Qql"/>
-        <segue reference="AdC-De-agH"/>
+        <segue reference="kk5-HE-cyu"/>
+        <segue reference="SEp-H9-hjL"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
 </document>
