--- a/pak-ios/storyboards/Base.lproj/Main.storyboard
+++ b/pak-ios/storyboards/Base.lproj/Main.storyboard
@@ -1513,6 +1513,7 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                                                 </button>
                                             </subviews>
                                         </view>
+                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <rect key="contentStretch" x="0.0" y="0.0" width="0.0" height="0.0"/>
                                         <constraints>
                                             <constraint firstItem="8S8-B7-9nQ" firstAttribute="leading" secondItem="OfM-TU-WW6" secondAttribute="leadingMargin" constant="40" id="3c2-7Q-H6g"/>
@@ -1611,7 +1612,7 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                                 </constraints>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="d7v-VF-wqt" userLabel="iv_product">
-                                <rect key="frame" x="16" y="64" width="343" height="325"/>
+                                <rect key="frame" x="16" y="20" width="343" height="325"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="325" id="GpD-vT-Uxh"/>
                                 </constraints>
@@ -1772,7 +1773,7 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KsE-67-aq8">
-                                <rect key="frame" x="330" y="91" width="29" height="30"/>
+                                <rect key="frame" x="330" y="47" width="29" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="29" id="EIi-Pe-JgE"/>
                                     <constraint firstAttribute="height" constant="30" id="FjH-S6-HY1"/>
@@ -7069,15 +7070,15 @@ EMKhTGlzdG8hA
         <image name="dwb_pak_usericon" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="0wQ-9P-YXB"/>
+        <segue reference="4If-JT-tFy"/>
         <segue reference="e49-xG-mKz"/>
-        <segue reference="OS7-IV-a8p"/>
+        <segue reference="cBN-SR-qJl"/>
         <segue reference="RzB-aK-gvt"/>
-        <segue reference="bmc-MF-fkN"/>
-        <segue reference="oBi-e6-wfk"/>
-        <segue reference="1vM-Rq-4HF"/>
+        <segue reference="qbC-4W-Evn"/>
+        <segue reference="YD1-6P-6T7"/>
+        <segue reference="k7V-In-QB3"/>
         <segue reference="kk5-HE-cyu"/>
-        <segue reference="SEp-H9-hjL"/>
+        <segue reference="AdC-De-agH"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
 </document>
