--- a/pak-ios/storyboards/Base.lproj/Main.storyboard
+++ b/pak-ios/storyboards/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -1148,70 +1148,76 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dwb_pak_background_loby" translatesAutoresizingMaskIntoConstraints="NO" id="eAe-Ay-Okt">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="bzd-RN-txU" userLabel="tv_publicity">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="8yV-fC-mV0" userLabel="cv_advertisement">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="0.0" reuseIdentifier="tvc_publicity_image" rowHeight="250" id="gdp-h6-ch7" customClass="TVCPublicityImage" customModule="pak_ios" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="250"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="gdp-h6-ch7" id="qgd-8U-0i7">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="250"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="4" minimumInteritemSpacing="0.0" id="bqs-aw-Atc">
+                                    <size key="itemSize" width="343" height="184"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cvc_advertisement" id="zbg-Up-Y0I" userLabel="cvc_advertisement" customClass="CVCAdvertisement" customModule="pak_ios" customModuleProvider="target">
+                                        <rect key="frame" x="1" y="0.0" width="373" height="212"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="373" height="212"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vi0-85-p4F">
-                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="250"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5wH-Zs-3Sr" userLabel="iv_advertisement">
+                                                    <rect key="frame" x="0.0" y="0.0" width="373" height="212"/>
                                                 </imageView>
                                             </subviews>
-                                            <constraints>
-                                                <constraint firstAttribute="bottomMargin" secondItem="vi0-85-p4F" secondAttribute="bottom" constant="-11" id="1mp-0N-bXO"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="vi0-85-p4F" secondAttribute="trailing" constant="-15" id="7HM-gk-m71"/>
-                                                <constraint firstItem="vi0-85-p4F" firstAttribute="top" secondItem="qgd-8U-0i7" secondAttribute="topMargin" constant="-11" id="caT-ZV-8kh"/>
-                                                <constraint firstItem="vi0-85-p4F" firstAttribute="leading" secondItem="qgd-8U-0i7" secondAttribute="leadingMargin" constant="-15" id="zgU-CS-fez"/>
-                                            </constraints>
-                                            <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
-                                        </tableViewCellContentView>
-                                        <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="5wH-Zs-3Sr" firstAttribute="width" secondItem="zbg-Up-Y0I" secondAttribute="width" id="2hB-aH-gUU"/>
+                                            <constraint firstItem="5wH-Zs-3Sr" firstAttribute="height" secondItem="zbg-Up-Y0I" secondAttribute="height" id="BJk-yv-zFM"/>
+                                            <constraint firstItem="5wH-Zs-3Sr" firstAttribute="centerX" secondItem="zbg-Up-Y0I" secondAttribute="centerX" id="aaR-ux-8M2"/>
+                                            <constraint firstItem="5wH-Zs-3Sr" firstAttribute="centerY" secondItem="zbg-Up-Y0I" secondAttribute="centerY" id="ene-UJ-fba"/>
+                                        </constraints>
+                                        <size key="customSize" width="373" height="212"/>
                                         <connections>
-                                            <outlet property="iv_publicity" destination="vi0-85-p4F" id="KTc-HS-AjR"/>
+                                            <outlet property="iv_advertisement" destination="5wH-Zs-3Sr" id="Pd6-YK-3qS"/>
                                         </connections>
-                                    </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tvc_placeholder" rowHeight="158" id="BEX-B7-QJL" customClass="TVCPlaceholder" customModule="pak_ios" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="278" width="375" height="158"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="BEX-B7-QJL" id="NGr-1M-e9f">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="158"/>
+                                    </collectionViewCell>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cvc_placeholder" id="ydt-wk-yqB" userLabel="cvc_placeholder" customClass="CVCPlaceholder" customModule="pak_ios" customModuleProvider="target">
+                                        <rect key="frame" x="2" y="216" width="371" height="192"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="371" height="192"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No hay anuncios que mostrar" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dX7-oq-1Zc">
-                                                    <rect key="frame" x="81.5" y="69" width="211" height="19"/>
-                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No hay anuncios que mostrar" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iuz-JX-3Na">
+                                                    <rect key="frame" x="73.5" y="85.5" width="224" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
-                                            <constraints>
-                                                <constraint firstItem="dX7-oq-1Zc" firstAttribute="centerY" secondItem="NGr-1M-e9f" secondAttribute="centerY" id="gXV-8N-1zu"/>
-                                                <constraint firstItem="dX7-oq-1Zc" firstAttribute="centerX" secondItem="NGr-1M-e9f" secondAttribute="centerX" id="hvD-vz-qqw"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="iuz-JX-3Na" firstAttribute="centerX" secondItem="ydt-wk-yqB" secondAttribute="centerX" id="X4U-2v-BTZ"/>
+                                            <constraint firstItem="iuz-JX-3Na" firstAttribute="centerY" secondItem="ydt-wk-yqB" secondAttribute="centerY" id="pno-bv-RvE"/>
+                                        </constraints>
+                                        <size key="customSize" width="371" height="192"/>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="bzd-RN-txU" firstAttribute="top" secondItem="xpa-Sd-iqk" secondAttribute="top" id="EDT-3Q-HS8"/>
-                            <constraint firstItem="ssE-dJ-SeG" firstAttribute="top" secondItem="bzd-RN-txU" secondAttribute="bottom" id="Ihq-XQ-O4h"/>
+                            <constraint firstItem="8yV-fC-mV0" firstAttribute="leading" secondItem="xpa-Sd-iqk" secondAttribute="leading" id="AxO-yf-CrO"/>
+                            <constraint firstAttribute="trailing" secondItem="8yV-fC-mV0" secondAttribute="trailing" id="Kbc-qD-0oJ"/>
+                            <constraint firstItem="8yV-fC-mV0" firstAttribute="top" secondItem="pwD-Au-NpL" secondAttribute="bottom" id="Kcb-ui-7W6"/>
+                            <constraint firstItem="ssE-dJ-SeG" firstAttribute="top" secondItem="8yV-fC-mV0" secondAttribute="bottom" id="Wj5-Z8-dsS"/>
                             <constraint firstItem="eAe-Ay-Okt" firstAttribute="top" secondItem="xpa-Sd-iqk" secondAttribute="top" id="jdU-iO-Fmp"/>
-                            <constraint firstItem="bzd-RN-txU" firstAttribute="leading" secondItem="xpa-Sd-iqk" secondAttribute="leading" id="nIA-kS-CLH"/>
-                            <constraint firstItem="bzd-RN-txU" firstAttribute="trailing" secondItem="xpa-Sd-iqk" secondAttribute="trailing" id="sXm-b5-7jT"/>
                             <constraint firstItem="ssE-dJ-SeG" firstAttribute="top" secondItem="eAe-Ay-Okt" secondAttribute="bottom" id="tUX-WZ-kSZ"/>
                             <constraint firstItem="eAe-Ay-Okt" firstAttribute="leading" secondItem="xpa-Sd-iqk" secondAttribute="leading" id="vhz-xb-vTx"/>
                             <constraint firstItem="eAe-Ay-Okt" firstAttribute="trailing" secondItem="xpa-Sd-iqk" secondAttribute="trailing" id="zlB-Sr-m5l"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="tv_publicity" destination="bzd-RN-txU" id="ygL-T6-OdK"/>
+                        <outlet property="cv_advertisement" destination="8yV-fC-mV0" id="6S7-yd-G9s"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d8o-lO-G0I" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -4068,7 +4074,7 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hbX-Da-I9L">
                                                     <rect key="frame" x="8" y="8" width="359" height="212"/>
-                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No hay anuncios que mostrar" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cWl-JI-a2a">
                                                     <rect key="frame" x="82" y="104.5" width="211" height="19"/>
