--- a/pak-ios/storyboards/Base.lproj/Main.storyboard
+++ b/pak-ios/storyboards/Base.lproj/Main.storyboard
@@ -1263,7 +1263,7 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                                                             <rect key="frame" x="0.0" y="0.0" width="375" height="164"/>
                                                         </imageView>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="X7e-48-Gu4" userLabel="v_category_name_background">
-                                                            <rect key="frame" x="130" y="104" width="245" height="60"/>
+                                                            <rect key="frame" x="0.0" y="104" width="375" height="60"/>
                                                             <color key="backgroundColor" red="0.31671219658160554" green="0.31671219658160554" blue="0.31671219658160554" alpha="0.50416135204081636" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="60" id="rCE-l8-bbE"/>
@@ -1286,7 +1286,7 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                                                         <constraint firstAttribute="bottom" secondItem="QNu-DW-tBN" secondAttribute="bottom" id="FEv-4k-X5f"/>
                                                         <constraint firstAttribute="trailing" secondItem="X7e-48-Gu4" secondAttribute="trailing" id="Q6N-Pv-64I"/>
                                                         <constraint firstItem="fm8-hn-CYt" firstAttribute="leading" secondItem="v4I-w4-vqR" secondAttribute="leading" id="Yrq-o3-whR"/>
-                                                        <constraint firstItem="X7e-48-Gu4" firstAttribute="leading" secondItem="v4I-w4-vqR" secondAttribute="leading" constant="130" id="bZV-jX-2HO"/>
+                                                        <constraint firstItem="X7e-48-Gu4" firstAttribute="leading" secondItem="v4I-w4-vqR" secondAttribute="leading" id="bZV-jX-2HO"/>
                                                         <constraint firstAttribute="bottom" secondItem="fm8-hn-CYt" secondAttribute="bottom" id="bvo-ky-PoY"/>
                                                         <constraint firstItem="fm8-hn-CYt" firstAttribute="top" secondItem="v4I-w4-vqR" secondAttribute="top" id="hwz-dZ-KkU"/>
                                                         <constraint firstAttribute="trailing" secondItem="fm8-hn-CYt" secondAttribute="trailing" id="jKZ-B9-zAY"/>
@@ -6500,14 +6500,14 @@ EMKhTGlzdG8hA
                                                             <rect key="frame" x="0.0" y="0.0" width="375" height="164"/>
                                                         </imageView>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xFA-Kd-HTh" userLabel="v_category_name_background">
-                                                            <rect key="frame" x="130" y="104" width="245" height="60"/>
+                                                            <rect key="frame" x="0.0" y="104" width="375" height="60"/>
                                                             <color key="backgroundColor" red="0.3167121966" green="0.3167121966" blue="0.3167121966" alpha="0.50416135200000001" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="60" id="VpF-2u-3gZ"/>
                                                             </constraints>
                                                         </view>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YOc-V5-EAL" userLabel="l_category_name">
-                                                            <rect key="frame" x="130" y="104" width="225" height="60"/>
+                                                            <rect key="frame" x="0.0" y="104" width="355" height="60"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="60" id="zwc-9B-f7Q"/>
                                                             </constraints>
@@ -6520,10 +6520,10 @@ EMKhTGlzdG8hA
                                                     <constraints>
                                                         <constraint firstItem="Hd9-rQ-aWU" firstAttribute="leading" secondItem="9Tc-C4-lam" secondAttribute="leading" id="JoO-Bo-PdF"/>
                                                         <constraint firstAttribute="trailing" secondItem="Hd9-rQ-aWU" secondAttribute="trailing" id="M4B-I3-4n5"/>
-                                                        <constraint firstItem="YOc-V5-EAL" firstAttribute="leading" secondItem="9Tc-C4-lam" secondAttribute="leading" constant="130" id="Oej-gq-rzY"/>
+                                                        <constraint firstItem="YOc-V5-EAL" firstAttribute="leading" secondItem="9Tc-C4-lam" secondAttribute="leading" id="Oej-gq-rzY"/>
                                                         <constraint firstAttribute="trailing" secondItem="xFA-Kd-HTh" secondAttribute="trailing" id="Z9e-Xb-dwg"/>
                                                         <constraint firstItem="Hd9-rQ-aWU" firstAttribute="top" secondItem="9Tc-C4-lam" secondAttribute="top" id="aqw-85-Tnu"/>
-                                                        <constraint firstItem="xFA-Kd-HTh" firstAttribute="leading" secondItem="9Tc-C4-lam" secondAttribute="leading" constant="130" id="few-Fv-LDj"/>
+                                                        <constraint firstItem="xFA-Kd-HTh" firstAttribute="leading" secondItem="9Tc-C4-lam" secondAttribute="leading" id="few-Fv-LDj"/>
                                                         <constraint firstAttribute="bottom" secondItem="YOc-V5-EAL" secondAttribute="bottom" id="hWb-Nc-4gC"/>
                                                         <constraint firstAttribute="trailing" secondItem="YOc-V5-EAL" secondAttribute="trailing" constant="20" id="ii4-Fz-NT1"/>
                                                         <constraint firstAttribute="bottom" secondItem="Hd9-rQ-aWU" secondAttribute="bottom" id="wm7-zz-b6x"/>
@@ -6608,7 +6608,7 @@ EMKhTGlzdG8hA
                                                             <rect key="frame" x="0.0" y="0.0" width="375" height="164"/>
                                                         </imageView>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="63V-uG-D2p" userLabel="v_category_name_background">
-                                                            <rect key="frame" x="130" y="104" width="245" height="60"/>
+                                                            <rect key="frame" x="0.0" y="104" width="375" height="60"/>
                                                             <color key="backgroundColor" red="0.3167121966" green="0.3167121966" blue="0.3167121966" alpha="0.50416135200000001" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="60" id="WNH-N9-Rv1"/>
@@ -6633,7 +6633,7 @@ EMKhTGlzdG8hA
                                                         <constraint firstItem="heE-FW-9tV" firstAttribute="top" secondItem="SOg-Cb-r20" secondAttribute="top" id="E5C-Vc-y4v"/>
                                                         <constraint firstAttribute="trailing" secondItem="K7Z-nn-3Ce" secondAttribute="trailing" constant="20" id="c6n-lx-AKC"/>
                                                         <constraint firstAttribute="trailing" secondItem="heE-FW-9tV" secondAttribute="trailing" id="ewq-XE-4Wr"/>
-                                                        <constraint firstItem="63V-uG-D2p" firstAttribute="leading" secondItem="SOg-Cb-r20" secondAttribute="leading" constant="130" id="h5k-r2-bOq"/>
+                                                        <constraint firstItem="63V-uG-D2p" firstAttribute="leading" secondItem="SOg-Cb-r20" secondAttribute="leading" id="h5k-r2-bOq"/>
                                                         <constraint firstAttribute="bottom" secondItem="heE-FW-9tV" secondAttribute="bottom" id="ndl-VB-E4K"/>
                                                         <constraint firstAttribute="bottom" secondItem="63V-uG-D2p" secondAttribute="bottom" id="uwE-Vx-sJJ"/>
                                                     </constraints>
@@ -7082,11 +7082,11 @@ EMKhTGlzdG8hA
         <image name="dwb_pak_usericon" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="4If-JT-tFy"/>
+        <segue reference="0wQ-9P-YXB"/>
         <segue reference="e49-xG-mKz"/>
         <segue reference="cBN-SR-qJl"/>
         <segue reference="RzB-aK-gvt"/>
-        <segue reference="qbC-4W-Evn"/>
+        <segue reference="bmc-MF-fkN"/>
         <segue reference="YD1-6P-6T7"/>
         <segue reference="k7V-In-QB3"/>
         <segue reference="kk5-HE-cyu"/>
